[package]
name = "rabbitmq_streamer"
version = "0.1.0"
edition = "2021"
description = "A library to consume RabbiMQ streams"

authors = ["André Claudino <claudino@d2x.com.br>"]
homepage = "https://github.com/neurono-ml/rabbitmq_streamer"
repository = "https://github.com/neurono-ml/rabbitmq_streamer"
readme = "README.md"
keywords = ["RabbitMQ", "streaming", "async"]
categories = ["development-tools"]
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
tokio-stream = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
anyhow = "1.0.98"
uuid = { version = "1.16.0", features = ["v4"] }
async-trait = "0.1.88"
lapin = { version = "2.5.3", features = ["serde_json"] }

[dev-dependencies]
testcontainers = "0.14"
